src/web/css/dashboard.css
/* ... */
#vmLaunch .col2 {
line-height: 23px;

}

#vm_image_id {
width: 290px;
}


#user_data {
	width: 287px;
	max-width: 500px;
	min-width: 200px;
	min-height: 50px;
	max-height:500px
}

.subm {
	width: 100px;
	display: block;
	vertical-align:bottom;
	float: left;
}
p.msg {
	margin-left: 10px;
}
.line {
	margin-bottom: 5px;
}
.line label {
	width: 170px;
}
div.submLine {

	display: inline;
}
#userDataError {
vertical-align: top;
}
.line input {
	display: inline;
	width: 287px;
}

.line select#vm_usage_id {
	width: 287px;
}

.submBtn {
	left: 0;
	vertical-align:bottom;
}
hr.plain {
 background-color: black;
 margin-bottom:5px;
}

#launchVM {
	float:left;
	left: 5px;
	bottom: 5px;
	margin: 10px;
}

#refreshBtn {
	float: right;
	display: block;
}

.term1 {
	width: 115px;
	margin: auto;
}
.longWordsBreak{
   display:inline-block;
   /*
   width:90px;
   word-wrap:break-word;
   overflow:hidden;
   */
}
#swUploadButtonDiv,#uploadButtonDiv{
	padding-left:10px;
}
#swUploadButtonDiv input,#uploadButtonDiv input{
	border:1px solid #C1C1C1;
}
#rContestName{
   word-wrap:break-word;
}
#swUploadSection, #uploadSection{
	font-size:13px;
}
#swUploadSection textarea, #uploadSection textarea{
	border:1px solid #C1C1C1;
}
#swUploadSection a.button6, #uploadSection a.button6{
	float:none;
	display:inline-block;
}
#swUploadSection #swDocumentList,#uploadSection #documentList{
	margin-bottom:10px;
	font-size:12px;
}
#swFileDescription{
	max-width: 500px;
	min-height: 50px;
	min-width: 100px;
	max-height: 500px;
}

/* Milestone round feedback area */
#milestoneRoundComment {
	float:left;
	clear:both;
	width: 100%;
	margin: 20px 0;
}

#milestoneRoundComment table{ border-collapse: collapse; width: 98%; margin: 0 1%; }

#milestoneRoundComment table th{
	text-align: center;
	height: 29px;
	line-height: 29px;
	font-size: 12px;
	color: #FFFFFE;
	font-weight: normal;
	background:url(../images/submission_list_th.png) repeat-x left -29px;
}
#milestoneRoundComment table th.first{
	width: 4px;
	background: url(../images/submission_list_th.png) no-repeat left 0!important;
}
#milestoneRoundComment table th.last{
	width: 6px;
	background: url(../images/submission_list_th.png) no-repeat right -58px!important;
}
#milestoneRoundComment table .left{ text-align: left; }

#milestoneRoundComment table td{
	text-align: center;
	font-size: 12px;
	color: #333333;
	font-weight: normal;
	padding: 10px 0;
	vertical-align: middle;
}

#milestoneRoundComment td a.button6{
	float:left;
	margin:5px 0;
}

#milestoneRoundComment td  .button6 span.left, #milestoneRoundComment td  .button6 span.right{ float:left!important; }

#milestoneRoundComment textarea.txtFeedback{
	clear:both;
	font-family:Arial, Helvetica, sans-serif;
	font-size:12px;
	color: #686868;
	width: 98%;
	height: 80px;
	display:block;
	padding: 4px;
	border: 1px solid  #979797;
	background: url(../images/single_submission_textarea.png) repeat-x left top;
}

/* Pipeline report */
.pipelineSearch {
    font-size: 11px;
    margin-bottom: 20px;
}

.pipelineSearch LABEL {
    font-weight: bold;
    padding-right: 6px;
    padding-top: 2px;
    font-size: 12px;
}

.pipelineSearch INPUT {
    margin-right: 3px;
    vertical-align: middle;
}

.pipelineSearch SELECT {
    width: auto;
    vertical-align: middle;
}

.pipelineSearch A.button1 {
    margin-top: 15px;
    margin-left: 10px;
}

.pipelineSearch FIELDSET {
    border: 0;
}

#pipelineSummary th.tableTitle {
    text-align: left;
    font-size: 14px;
}

#pipelineScheduledContests th.tableTitle {
    text-align: left;
    font-size: 14px;
}

#costReportAggregationArea th.tableTitle {
    text-align: left;
    font-size: 14px;
}


#pipelineDetails th.tableTitle {
    text-align: left;
    font-size: 14px;
}

#costDetails th.tableTitle {
    text-align: left;
    font-size: 14px;
}

#billingCostDetails th.tableTitle {
    text-align: left;
    font-size: 14px;
}

#contestFilter {
    margin-top: 20px;
}

#pipelineFilter {
    margin-top: 20px;
    margin-bottom: 20px;
    float: left;
}

TABLE.pipelineStats, TABLE.billingCostReport  {
    width: 100%;
    border-collapse: collapse;
    margin-bottom: 15px;
    border: 1px solid #bdbdbd;
}

TABLE.pipelineStats TH, TABLE.billingCostReport TH {
    color: #FFF;
    font-size: 11px;
    height: 33px;
}

TABLE.pipelineStats TH.tableTitle, TABLE.billingCostReport TH.tableTitle {
    background: transparent url(../images/calendar_header.png) repeat-x;
}

TABLE.pipelineStats TH.first, TABLE.billingCostReport TH.first  {
    border-left: 1px solid #37302d;
}

TABLE.pipelineStats TD {
    font-size: 11px;
    text-align: center;
    padding: 5px 0;
    border: 1px solid #a8abad;
    width: 10%;
}

TABLE.billingCostReport TD {
    font-size: 11px;
    text-align: center;
    padding: 5px 0;
    border: 1px solid #a8abad;
    width: 7.5%;
}

TABLE.pipelineStats TD.date, TABLE.billingCostReport TD.date  {
    font-size: 11px;
    font-weight: normal;
    width: 14%;
}

TABLE.pipelineStats TD.fees, TABLE.billingCostReport TD.fees {
    width: 20%;
    font-size: 11px;
}

TABLE.pipelineStats TD.fees P, TABLE.billingCostReport TD.fees P {
    margin: 0 0 4px 0;
}

TABLE.pipelineStats TR.even TD, TABLE.billingCostReport TR.even TD {
    background-color: #F3F3F3;
}

TABLE.pipelineStats TR.noStrips TD, TABLE.billingCostReport TR.noStrips TD {
    background-color: #FFFFFF !important;
}

TABLE.pipelineStats TD.checkbox, TABLE.billingCostReport TD.checkbox  {
    width: 4%;
}

TABLE.pipelineStats TH INPUT, TABLE.billingCostReport TH INPUT {
    width: 13px;
    height: 13px;
}

TABLE.pipelineStats TR.alt TD, TABLE.billingCostReport TR.alt TD {
	background-color: #F3F3F3;
}

TABLE.pipelineStats TR.total TD, TABLE.billingCostReport TR.total TD {
	background-color: #CCC8C9;
    font-weight: bold;
}

TABLE.pipelineStats TH.tableColumn, TABLE.billingCostReport TH.tableColumn {
	background-color: #CCC8C9;
	color: #000;
}

#breakdownBody TH.tableColumn {
	padding-left: 5px;
	padding-right: 5px;
}
/* ... */

